project(BasicSTL)

add_subdirectory(dynlib)
add_subdirectory(slib)
add_subdirectory(helloworld)
add_subdirectory(priority_queue)
add_subdirectory(template)
add_subdirectory(SequenceContainers)
add_subdirectory(AssociativeContainers)
add_subdirectory(UnorderedContainers)
add_subdirectory(iterator)
add_subdirectory(Functors)
add_subdirectory(Non-modifying-Algorithms)
add_subdirectory(Modifying-Algorithms)
add_subdirectory(Sorting)
add_subdirectory(SortedData&NumericAlgorithm)
add_subdirectory(String)