Project(Modern-C++)

add_subdirectory(introductory)
add_subdirectory(MoveSemantics)
add_subdirectory(PerfectForwarding)
add_subdirectory(UserDefinedLiterals)
add_subdirectory(CompilerGeneratedFunctions)
add_subdirectory(SharedPointer)
add_subdirectory(WeakPointer)
add_subdirectory(UniquePointer)
add_subdirectory(ResourceManagingClass)
add_subdirectory(RegularExpression)